--- a/flexbe_manipulation_states/package.xml
+++ b/flexbe_manipulation_states/package.xml
@@ -1,4 +1,8 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>flexbe_manipulation_states</name>
   <version>1.0.1</version>
   <description>
@@ -9,15 +13,17 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
-  <run_depend>rospy</run_depend>
-  <run_depend>flexbe_core</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>moveit_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
+  <exec_depend>flexbe_core</exec_depend>
+  <exec_depend>moveit_msgs</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>tf</exec_depend>
 
   <export>
-    <flexbe_states />
+    <flexbe_states/>
   </export>
 
 </package>
