--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,46 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
+#  schedule:
+#    - cron: "0 0 * * 0" # every Sunday at midnight
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  industrial_ci:
+    if: github.event.pull_request.draft == false  # only run on non-draft PRs
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      ADDITIONAL_DEBS: 'apt-utils dialog'
+      CATKIN_LINT: pedantic
+      CATKIN_LINT_ARGS: '--ignore description_boilerplate'
+      CCACHE_DIR: /github/home/.ccache  # Directory for ccache (and how we enable ccache in industrial_ci)
+      CMAKE_ARGS: -DCMAKE_BUILD_TYPE=Release
+      PYLINT_ARGS: '--output-format=parseable --errors-only'
+      PYLINT_CHECK: true
+      ROS_REPO: main
+
+    strategy:
+      matrix:
+        include:
+          - { ROS_DISTRO: kinetic }
+          - { ROS_DISTRO: noetic }
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          lfs: true
+          ssh-known-hosts: ''
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # This step will fetch/store the directory used by ccache before/after the ci run
+      - uses: actions/cache@v2
+        with:
+          path: ${{ env.CCACHE_DIR }}
+          key: ccache-${{ matrix.ROS_DISTRO }}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - uses: ros-industrial/industrial_ci@master
+        with:
+          config: ${{toJSON(matrix)}}
