--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ env:
     - PYLINT_CHECK=true
     - ROS_REPO=main
   matrix:
-    - ROS_DISTRO=kinetic # UPSTREAM_WORKSPACE=.ci.rosinstall.kinetic BEFORE_SETUP_UPSTREAM_WORKSPACE='sudo -H pip install -q --no-deps -r .pip.install'
-    - ROS_DISTRO=noetic # UPSTREAM_WORKSPACE=.ci.rosinstall.noetic
+    - ROS_DISTRO=kinetic
+    - ROS_DISTRO=noetic
 install:
   - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
 script:
