--- a/flexbe_manipulation_states/package.xml
+++ b/flexbe_manipulation_states/package.xml
@@ -20,7 +20,7 @@
   <exec_depend>moveit_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>tf</exec_depend>
+  <exec_depend>trajectory_msgs</exec_depend>
 
   <export>
     <flexbe_states/>
