--- a/flexbe_navigation_states/package.xml
+++ b/flexbe_navigation_states/package.xml
@@ -25,6 +25,8 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
 
+  <test_depend>rostest</test_depend>
+
   <export>
     <flexbe_states/>
   </export>
