--- a/flexbe_manipulation_states/package.xml
+++ b/flexbe_manipulation_states/package.xml
@@ -22,6 +22,8 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
 
+  <test_depend>rostest</test_depend>
+
   <export>
     <flexbe_states/>
   </export>
