--- a/flexbe_utility_states/package.xml
+++ b/flexbe_utility_states/package.xml
@@ -21,6 +21,8 @@
   <exec_depend>roslaunch</exec_depend>
   <exec_depend>rospy</exec_depend>
 
+  <test_depend>rostest</test_depend>
+
   <export>
     <flexbe_states/>
   </export>
